--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+.app-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-grow: 5;
+  margin: auto;
+  justify-content: center;
+  min-width: 50vw;
+  max-width: 800px;
+}
+
+.app-container > * {
+  width: 100%;
+  text-align: center;
+}
+
 ul {
   padding-inline-start: 0;
   margin: 5px;
@@ -8,6 +23,11 @@ li {
   display: flex;
   flex-basis: row nowrap;
   column-gap: 1rem;
+  row-gap: 1rem;
+  background: paleturquoise;
+}
+
+li:nth-child(even) { background: palegoldenrod; 
 }
 
 .complete {
@@ -15,6 +35,7 @@ li {
 
 .complete p {
   text-decoration: line-through;
+  color: grey;
 }
 
 .incomplete {
@@ -22,4 +43,8 @@ li {
 
 .incomplete p {
   font-weight: bolder;
+}
+
+li button {
+  margin-left: auto;
 }
